[FIX] account: prevent the div `journal_div` from being displayed empty
Issue:
In a certain case the div `journal_div` has nothing inside and is displayed. This causes the form view to be offsetted.

Steps to reproduce:
- Install "l10n_ar" and switch to an Argentinian company
- The user must not have the group `base.group_multi_currency`
	- Settings > Currencies and deactivate the USD
- Make sure you only have one Sales journal
- Create an invoice
- The field 'Result' is offsetted

Cause:
The div `journal_div` is constructed like this:
```xml
<div name="journal_div" class="d-flex">
    <field name="journal_id"
           invisible="not show_journal"/>
    <div name="currency_div"
         groups="base.group_multi_currency">
       ...
    </div>
</div>
```
In the case `show_journal = False` and the user doesn't have the group `base.group_multi_currency`, then `journal_div` is empty but it's still displayed.

It will take the place of a label, this means that the next field label will be in the "input" column and its input in the "label" column.

Solution:
We need to not display the `div` when `show_journal = False` AND the user doesn't have the group `base.group_multi_currency`. This is not possible.

A possible fix would be to add a non-stored computed field just like `show_journal` to show or not the div.

This commit chose to fix this with CSS: do not display `journal_div` if it's empty. This is also more secure in the case where a customization added things in the div.

opw-5221931

closes odoo/odoo#236352

X-original-commit: ef83810ff980c72297e07985c642f2c54593b866

--- a/addons/account/static/src/css/account.css
+++ b/addons/account/static/src/css/account.css
@@ -72,3 +72,7 @@
         margin-left: 2px;
     }
 }
+
+.o_account_move_form_view .o_cell:has(>div[name="journal_div"]:empty) {
+    display: none !important;
+}
